--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.2",
   "private": false,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "app.js"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
